footer contrast ratio fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -123,7 +123,7 @@ footer {
     padding-bottom: 5px;
     background-color: var(--primary-color);
     font-family: 'Source Sans 3';
-    color: var(--accent2-color);
+    color: white;
     text-align: center;
     margin: 20px 0;
 }
